--- a/graduate-work/assets/html/index.html
+++ b/graduate-work/assets/html/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="service-item"><span class="service-bold">情報漏えい調査</span>
                     <p class="item-description">
-                        メールアドレス、パスワードなどの個人情報やアカウント情報、クレジットカードなどの情報漏えい監視サービスです。セキュリティ対策のポイントをお伝えし、情報漏えい対策をサポートします。
+                        メールアドレスやパスワードなどの個人情報やアカウント情報、クレジットカードなどの情報漏えい監視サービスです。セキュリティ対策のポイントをお伝えし、情報漏えい対策をサポートします。
                     </p>
                     <a href="https://cyres.jp/service" class="service-details">Read More...</a>
                 </div>
